--- a/gtk/jockey-gtk.desktop.in
+++ b/gtk/jockey-gtk.desktop.in
@@ -5,7 +5,7 @@ Icon=jockey
 Exec=/usr/bin/jockey-gtk
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;Settings;DesktopSettings;X-GNOME-Settings-Panel;HardwareSettings;
+Categories=GNOME;GTK;Settings;DesktopSettings;HardwareSettings;
 NotShowIn=KDE;
 X-Ubuntu-Gettext-Domain=jockey
 X-GNOME-Settings-Panel=jockey
