teaked: added an akmods metapacakage for jockey to pull in all dependencies required

--- a/upstream/config/jockey.conf
+++ b/upstream/config/jockey.conf
@@ -1,3 +1,3 @@
 # When true, this option tells Jockey to use dynamically compiled kernel
 # modules (akmods) if available. When false, it uses static kmod packages:
-akmods=true
+akmods=false
